--- a/src/index.html
+++ b/src/index.html
@@ -615,7 +615,68 @@
             </div>
         </section>
         <!-- /say -->
+        <section class="news section-default">
+        <div class="container">
+            <div class="news__title-wrapper d-flex justify-content-between align-items-center">
+                <h2 class="title">Latest News</h2>
+                <a class="news__link" href="#">All News in our blog</a>
+            </div>
 
+            <div class="row">
+                <div class="col-4">
+                    <article class="news__card">
+                        <a href="#" class="news__card-img">
+                            <img src="img/news0.jpg" alt="news0">
+                        </a>
+                        <div class="news__card-info">
+                            <h5 class="news__card-title">New Web Design Trends</h5>
+                            <span class="news__card-author">John Doe | 10 December</span>
+                            <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                        </div>
+                        <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article class="news__card">
+                        <a href="#" class="news__card-img">
+                            <img src="img/news1.png" alt="news1">
+                        </a>
+                        <div class="news__card-info">
+                            <h5 class="news__card-title">Minimalistic Design Forever Minimalistic Design ForeverMinimalistic Design Forever</h5>
+                            <span class="news__card-author">John Doe | 9 December</span>
+                            <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                        </div>
+                        <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article class="news__card">
+                        <a href="#" class="news__card-img">
+                            <img src="img/news2.png" alt="news2">
+                        </a>
+                        <div class="news__card-info">
+                            <h5 class="news__card-title">Hipster’s Style in Web</h5>
+                            <span class="news__card-author">John Doe | 7 December John Doe | 7 December</span>
+                            <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                        </div>
+                        <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
+                    </article>
+                </div>
+
+            </div>
+        </div>
+    </section>
+        <!-- / news-->
+        <section class="newsletter bg-gray">
+            <div class="newsletter__container">
+                <h2 class="newsletter__title">Stay informed with OUR NEWSLETTER</h2>
+                <form action="#" class="newsletter__form d-flex">
+                    <input class="newsletter__form-input" type="email" placeholder="Enter email here">
+                    <button class="newsletter__form-btn" type="submit">Subscribe</button>
+                </form>
+                <p class="contact__form-desc text-center"><i class="fas fa-info-circle"></i> Please trust us, we will never send you spam</p>
+            </div>
+        </section>
         <section class="contact section-default">
             <div class="contact__container">
                 <h2 class="contact__title title text-center">Contact</h2>
@@ -668,58 +729,6 @@
             </div>
         </section>
         <!--/contact-->
-        <section class="news section-default">
-            <div class="container">
-                <div class="news__title-wrapper d-flex justify-content-between align-items-center">
-                    <h2 class="title">Latest News</h2>
-                    <a class="news__link" href="#">All News in our blog</a>
-                </div>
-
-                <div class="row">
-                    <div class="col-4">
-                        <article class="news__card">
-                            <a href="#" class="news__card-img">
-                                <img src="img/news0.jpg" alt="news0">
-                            </a>
-                            <div class="news__card-info">
-                                <h5 class="news__card-title">New Web Design Trends</h5>
-                                <span class="news__card-author">John Doe | 10 December</span>
-                                <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
-                            </div>
-                            <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
-                        </article>
-                    </div>
-                    <div class="col-4">
-                        <article class="news__card">
-                            <a href="#" class="news__card-img">
-                                <img src="img/news1.png" alt="news1">
-                            </a>
-                            <div class="news__card-info">
-                                <h5 class="news__card-title">Minimalistic Design Forever Minimalistic Design ForeverMinimalistic Design Forever</h5>
-                                <span class="news__card-author">John Doe | 9 December</span>
-                                <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
-                            </div>
-                            <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
-                        </article>
-                    </div>
-                    <div class="col-4">
-                        <article class="news__card">
-                            <a href="#" class="news__card-img">
-                                <img src="img/news2.png" alt="news2">
-                            </a>
-                            <div class="news__card-info">
-                                <h5 class="news__card-title">Hipster’s Style in Web</h5>
-                                <span class="news__card-author">John Doe | 7 December John Doe | 7 December</span>
-                                <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
-                            </div>
-                            <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
-                        </article>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <!-- / news-->
     </main>
     <!-- /main -->
     <footer class="footer bg-gray d-flex justify-content-center align-items-center">
